[package]
name = "rust-sse-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
env_logger = "0.11.2"
futures-util = "0.3.30"
log = "0.4.20"
parking_lot = "0.12.1"
tokio = { version = "1.36.0", features = ["sync"] }
tokio-stream = "0.1.14"
